# githubactions

./: pyproject.toml
.github/workflows/: aksversion.py  conda.yml  scheduled-aks-version.yml  scheduled-aks.yml
aks-version/: aks_operations.py  aksversion.py  blob_operations.py  conda.yml  email_operations.py  send_alert.py  send_email.py  test.py
cda/environments/: dev.tfvars
scripts/: miniconda.sh
