[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aks-version"
version = "0.1.0"
description = "For AKS alert"
authors = ["PrzemyslawGornik"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
azure-identity = "^1.15.0"
black = "^22.3.0"
coverage = "^6.3.2"
flake8-isort = "^4.1.1"
isort = "^5.10.1"
azure-communication-email = "~1.0.0"
azure-mgmt-containerservice = "^29.1.0"
azure-storage-blob = "^12.19.1"
loguru = "~0.7.2"
python-hcl2 = "^14.3.2"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
py_version = 38
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=app --flake8 --mypy"
